# GKNEXUS

./: README.md  README_ES
RBUILD2026v2/: LMSTUDIO_INTEGRATION.md  lmstudio_auto_capture.py  lmstudio_capture.py  lmstudio_chat_capture.py  lmstudio_monitor.py  pyproject.toml  test_rag_capture.py
RBUILD2026v2/GLIKCH-tech-site/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
RBUILD2026v2/GLIKCH-tech-site/server/: index.js
RBUILD2026v2/GLIKCH-tech-site/server/db/: schema.sql  seed.json
RBUILD2026v2/GLIKCH-tech-site/src/: App.tsx  styles.css
RBUILD2026v2/MemoryManagement/: README.md  __init__.py  cli.py  models.py  pyproject.toml  requirements.txt  storage.py  webapp.py
RBUILD2026v2/MemoryManagement/docs/: agent_templates.json  calendar_tasks.json  emotion_presets.json  extensions.json  index.json  ui_settings.json
RBUILD2026v2/MemoryManagement/docs/conversations/: 07-03-26-3-11-AM-ID-005.md  07-03-26-ID-004.md  ID-CHAT006.md  IDCHATX.md  bundle-check.md  critical-fetch-smoke.md  fail-open-smoke.md  final-live-check.md  final-polish-smoke.md  final-render-smoke.md  image-only-smoke.md  image-smoke-test.md  live-six-turn-check.md  lmstudio-chat-20260703T042145.md  (+19 more)
RBUILD2026v2/MemoryManagement/memorymanagement.egg-info/: requires.txt
RBUILD2026v2/MemoryManagement/templates/: chat.html  conversation.html  index.html  login.html
RBUILD2026v2/MemoryManagement/tests/: test_cli.py  test_storage.py
RBUILD2026v2/memorymanagement.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+69 files in other folders)
